New PettingZoo enviroment for multi agent scopa! tests on how the enviorment behaves are in transition function tests

--- a/.gitignore
+++ b/.gitignore
@@ -124,7 +124,6 @@ celerybeat.pid
 # Environments
 .env
 .venv
-env/
 venv/
 ENV/
 env.bak/
@@ -161,3 +160,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 runs
+res
